@@ -1,6 +1,6 @@
 [ ABOUT ]
 
-tintwizard 0.24 (3rd September 2009)
+tintwizard 0.2.5 (3rd September 2009)
 
 Thank you for downloading tintwizard!
 
