@@ -1,3 +1,8 @@
+3rd September 2009 - Euan Freeman
+  - Added 'systray_sort' option
+  
+  - Created documentation for developers (see doc folder) about how to modify tintwizard to add new tint2 settings.
+
 3rd September 2009 - Revision 137 - Euan Freeman
   - User can now "disable" the 'taskbar_active_background_id' option
   
